--- a/_data/projects.json
+++ b/_data/projects.json
@@ -20,13 +20,13 @@
 	{
 		"name": "SciCumulus",
 		"image": "placeholder.jpg",
-		"url": "https://scicumulusc2.wordpress.com/"
+		"url": "https://scicumulusc2.wordpress.com/",
 		"description": "a parallel scientific workflow management system with solid provenance data management available for cluster and cloud environments"
 	},
 	{
 		"name": "ARMFUL",
 		"image": "placeholder.jpg",
-		"url": "https://hpcdb.github.io/armful"
+		"url": "https://hpcdb.github.io/armful",
 		"description": "a component-based architecture for analyzing raw data from multiple files"
 	}
 
